k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: vinayspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: vinaykumar1999/worker-app:latest
