k8s/result-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: vinayspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: towfiqueahmmed/result:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: vinayspace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: result
