k8s/vote-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: vinayspace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: towfiqueahmmed/vote:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: vinayspace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vote
