k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: vinayspace
spec:
  ingressClassName: nginx
  rules:
  - host: vote.vinay.diogohack.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
  - host: result.vinay.diogohack.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80


#this is to test the file 
#this is the second test 
#this is the third test
